fix: css used for configuiration pages. Move id below metadata. Wrap all pages

--- a/src/app/configurations/crawlhostgroupconfig/crawlhostgroupconfig-details/crawlhostgroupconfig-details.component.css
+++ b/src/app/configurations/crawlhostgroupconfig/crawlhostgroupconfig-details/crawlhostgroupconfig-details.component.css
@@ -8,3 +8,6 @@
   filter: alpha(opacity=50);
 }
 
+.mat-form-field {
+  width: 100%;
+}
