--- a/src/app/configurations/politenessconfig/politenessconfig-details/politenessconfig-details.component.css
+++ b/src/app/configurations/politenessconfig/politenessconfig-details/politenessconfig-details.component.css
@@ -1,10 +1,2 @@
 
-.customRobotTxtInput > * {
-  width: 80%;
-}
-
-.robotPolicyDropdown {
-  margin-bottom: 1em;
-  width: 50%;
-}
 
